feat(dev): seed default admin user in development

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 APP_NAME=repo_new API
+APP_ENV=dev
 DATABASE_URL=sqlite:///./repo_new.db
 SECRET_KEY=change-me
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+ADMIN_EMAIL=admin@local.dev
+ADMIN_PASSWORD=Admin123!
+ADMIN_ROLE=admin
