--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 ADMIN_EMAIL=admin@local.dev
 ADMIN_PASSWORD=Admin123!
+# bcrypt only supports passwords up to 72 UTF-8 bytes.
 ADMIN_ROLE=admin
