feat(cutoff): enforce location cut-off and support next-day ordering prompt
Add per-location cutoff_time with fallback APP_DEFAULT_CUTOFF_TIME.
Enforce same-day cutoff for HTML/API orders and render next-day confirmation prompt.
Update admin/order/orders templates and add coverage for cutoff flows.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ ADMIN_EMAIL=admin@local.dev
 ADMIN_PASSWORD=Admin123!
 # bcrypt only supports passwords up to 72 UTF-8 bytes.
 ADMIN_ROLE=admin
+APP_DEFAULT_CUTOFF_TIME=10:00
