feat(settings): add ordering opening hours and enforce order window

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ ADMIN_PASSWORD=Admin123!
 # bcrypt only supports passwords up to 72 UTF-8 bytes.
 ADMIN_ROLE=admin
 APP_DEFAULT_CUTOFF_TIME=10:00
+
+APP_ORDER_OPEN_TIME=06:00
+APP_ORDER_CLOSE_TIME=23:00
